refactor: sends notification to subscriber using the new trigger method
Provide the email to the trigger method, it will send the notif to
emails in Notification configs and to the subscriber